  * preinst_check_catversion: Handle missing catalog version file.
  * pg_renamecluster: Don't try to rename a non-existing stats directory.
  * pg_conftool: Refuse operation on non-existing clusters.
  * maintscript-functions, templates: Remove '#' characters from upgrade
    instructions on catalog version change for easier cut-and-paste.

 -- Christoph Berg <christoph.berg@credativ.de>  Wed, 10 Feb 2016 11:28:46 +0100

postgresql-common (172) unstable; urgency=medium

  [ Christoph Berg ]
  * pg_buildext: Mute diff warning about missing debian/tests/control.in.
  * pg_ctlcluster: Skip systemctl redirect with --bindir.
  * pg_createcluster: Drop warning if /tmp is used as socket directory.
    Instead, just print the socket directory on cluster creation.
  * Update French debconf translations, thanks Julien Patriarca!
    (Closes: #809800)
  * 9.5 released! Setting as default.

  [ Martin Pitt ]
  * debian/supported-versions: Switch Ubuntu 16.04 to 9.5.
  * debian/supported-versions: Drop obsolete Ubuntu versions.

 -- Christoph Berg <christoph.berg@credativ.de>  Thu, 07 Jan 2016 15:13:06 +0100

postgresql-common (171) unstable; urgency=medium

  [ Christoph Berg ]
  * pgdg: Deprecate 8.4 and 9.0.
  * Enable 9.4 for wheezy-backports.
  * pg_createcluster: Fix stats_temp_directory handling on 8.3, thanks to
    Marco Nenciarini for the inital patch.
  * pg_createcluster: Mute verbose chattr output.
  * pg_conftool: Don't quote output in '-s'hort mode.
  * debian/maintscripts-functions: If the catalog version changes in
    devel/alpha versions, save a minimal copy of the old version binaries in
    the preinst to enable using pg_upgrade. Use debconf in the postinst to
    instruct the user how to proceed with the upgrade.
  * pg_buildext: Replace multiple occurrences of PGVERSION on the same line,
    and implement replacing for debian/tests/control.in.
  * t/015_start_stop.t: Validate pg_ctlcluster/systemctl exit codes.